--- a/sryle.css
+++ b/sryle.css
@@ -117,7 +117,7 @@ img#pochta {
 img#callme {
 	position: absolute;
 	margin-left: 20px;
-	margin-top: 13px;
+	margin-top: 13px;у3ц
 	width: 15px;
 	height:15px;
 }
@@ -707,3 +707,6 @@ p#so {
 	text-align: center;
 padding-top:  14px;
 }
+@media screen and (max-width: 1280px) { div.contentblock {width: 1200px;} }
+@media screen and (max-width: 1140px) { div.contentblock {width: 1024px;} }
+@media screen and (max-width: 992px) { div. contentblock {width: 970px;} }
