--- a/sryle.css
+++ b/sryle.css
@@ -12,8 +12,12 @@ div#logopic {
 	margin-top: 15px;
 	height: 70px;
 }
-div#content {
+body {
 	width: 1650px;
+	margin: 0 auto;
+}
+div#content {
+	width: 100%;
     margin: 0 auto;
     background-color: #ffffff;
 }
